[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/menu/UIFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/GlowSansSC-Normal-Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/云峰飞云体.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/game/GameOver.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 180
outline_size = 4
outline_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 80
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.243137, 0.223529, 0.223529, 0.627451 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.0470588, 0.67693, 0.952941, 0.313726 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.243137, 0.223529, 0.223529, 0.705882 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.0470588, 0.67693, 0.952941, 0.313726 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.243137, 0.223529, 0.223529, 0.784314 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.0470588, 0.67693, 0.952941, 0.313726 )
shadow_size = 10

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 40
custom_constants/margin_left = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/separation = 60

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1880.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 1 )
text = "游戏结束！"
valign = 1

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 226.0
margin_right = 1880.0
margin_bottom = 353.0
custom_fonts/font = SubResource( 2 )
text = "你的分数是:"
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 384.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 660.0
margin_top = 83.0
margin_right = 1260.0
margin_bottom = 613.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 40

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 150.0
rect_min_size = Vector2( 600, 150 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "退出游戏"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 600.0
margin_bottom = 340.0
rect_min_size = Vector2( 600, 150 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "返回主菜单"

[node name="Again" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 380.0
margin_right = 600.0
margin_bottom = 530.0
rect_min_size = Vector2( 600, 150 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "再来一局"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Again" to="." method="_on_Again_pressed"]
